=== (ongoing) ===

- Made the app ready for Django 1.8-1.9 and Python2.7-3.5
- Entirely recreated migrations for Django>1.8

=== 0.2 ===

- added check_newsletter_signups command
- improved admin

=== 0.1 ===
- Initial commit